Menu updated for demo

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
   <!-- MODERNIZR -->
   <script type='text/javascript' src='assets/js/modernizr.min.js'></script>
-  
+
 <style type="text/css">.recentcomments a{display:inline !important;padding:0 !important;margin:0 !important;}</style>
 </head>
 <body>
@@ -69,13 +69,15 @@
         </button>
       </div>
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <!-- ul class="nav navbar-nav -sanspro-light -stretch-container" -->
-          
-<div class="nav"><ul>
-<li id="menu-item-2" class="menu-item-2"><a></a></li>
-</ul></div>
-          <!-- span class="-stretch"></span -->
-        <!-- /ul -->
+       <ul class="nav navbar-nav -sanspro-light -stretch-container">
+<li><a href="#">Home</a></li>
+    <li><a href="#">New Vehicles</a></li>
+    <li><a href="#">Pre-Owned Vehicles</a></li>
+    <li><a href="#">News &amp; Events</a></li>
+    <li><a href="#">Contact Us</a></li>
+<li><a href="#">Find a Dealer</a></li>
+          <span class="-stretch"></span>
+        </ul>
       </div>
     </div>
     <!-- /Nav ENDS -->
